Study questions. week 2

--- a/index.html
+++ b/index.html
@@ -430,9 +430,27 @@ The final exam for this course is cumulative and open resource (open note, open 
 <p><strong>Goals</strong>: Refine your understanding of the neural code by enumerating what information in the environment is there to be perceived.<br />
 <strong>Reading</strong>: J.J. Gibson <a href="https://drive.google.com/open?id=11M9iOBIreqVe4yIccx1t_0XWepA7c6EE">“The Environment as a Source of Stimulation”</a> from <em>The Senses Considered as Perceptual Systems</em><br />
 <strong>Study questions</strong>:</p>
+<ul>
+<li>Study question 1: As students of the perceptual systems, Gibson encourages us to focus on a physics that describes physical phenomena at spatial scales relevant to animals (millimeters to kilometers). Provide one example of a situation in which this simplification adds to our understanding of sensory stimulation, and one example where it does not.<br />
+</li>
+<li>Study question 2: The chapter notes that as terrestrial animals, we are subject to atmospheric pressure. Why are we not explicitly aware of this constant stimulation? How is this similar to the frog’s visual system that we considered last week?<br />
+</li>
+<li>Study question 3: Gibson describes language and visual art as second-order sources of information. What does this mean? What would be the primary source of information as you read these words?</li>
+</ul>
 </div>
 <div id="january-21-what-is-information" class="section level4">
 <h4>January 21: What is information?</h4>
+<p><strong>Goals</strong>: Be able to define <em>infomation</em> as a quantitative concept. Explain how <em>entropy</em> in information theory related to entropy from physics.<br />
+<strong>Reading</strong>: Read: Pierce <a href="https://drive.google.com/file/d/1Azv63EXmCJetPiIQr4JWgy9WPxwdsfDU/view?usp=sharing">“The Origins of Information Theory”</a> from <em>An Introduction to Information Theory: Symbols, Signals, and Noise</em><br />
+<strong>Note</strong>: Pay attention to the notes in the margins. Some pages are optional.<br />
+<strong>Study questions</strong>:</p>
+<ul>
+<li>Study question 1: Your reading discusses entropy in both the thermodynamic sense as well as the information/communication sense. What fundamental similarity do these two senses share?<br />
+</li>
+<li>Study question 2: “The more we know about what message the source will produce, the less uncertainty, the less the entropy, and the less the information”. Please explain how knowing <em>more</em> about a message means <em>less</em> information.<br />
+</li>
+<li>Study question 3: When sending messages via telegraphy, engineers had to deal with noise over the cables and lines. Think about neurons sending messages down axons. What types of noise might exist? What properties of neurons ameliorate some of these issues?</li>
+</ul>
 </div>
 <div id="january-24-what-is-information" class="section level4">
 <h4>January 24: What is information?</h4>
