--- a/index.html
+++ b/index.html
@@ -454,9 +454,24 @@ The final exam for this course is cumulative and open resource (open note, open 
 </div>
 <div id="january-24-what-is-information" class="section level4">
 <h4>January 24: What is information?</h4>
+<p><strong>Goals</strong>: Become comfortable calculating entropy from some common probability distributions.<br />
+<strong>Reading</strong>: Read: Stone <a href="https://drive.google.com/file/d/1eMVkkX4RfwVjTBtLkYjWmwk_2uhUT68W/view?usp=sharing">“Information Theory”</a> from <em>Principles of Neural Information Theory: Computational Neuroscience and Metabolic Efficiency</em><br />
+<strong>Study questions</strong>:</p>
+<ul>
+<li>Study question 1: Consider Figure 2.3a from your reading, and consider it within the specific context of a random variable, such as the outcome of a coin toss. What does it mean to say that Shannon information is a unit of surprise?<br />
+</li>
+<li>Study question 2: What is the entropy of a six-sided die?<br />
+</li>
+<li>Study question 3: Let’s say that there are 1800 students at Bates College, and 60 of them are neuroscience majors. What is the entropy of the college, and what is the entropy of neuroscience majors?<br />
+</li>
+<li>Study question 4: Which entropy would be highest? Which would be the lowest? Why? (a) Neuroscience majors who are juniors; (b) Students who have taken one chemistry class; (c) Students who have taken an FYS.</li>
+</ul>
 </div>
 <div id="january-26-what-is-information" class="section level4">
 <h4>January 26: What is information?</h4>
+<p><strong>Goals</strong>: Apply the concepts from information theory to neurons.<br />
+<strong>Reading</strong>: Read: Stone <a href="https://drive.google.com/file/d/1Q4PR5CriSno2wKcDOSwihdSZ3U1Yp5op/view?usp=sharing">Selections from Chapter 3</a> from <em>Principles of Neural Information Theory: Computational Neuroscience and Metabolic Efficiency</em><br />
+<strong>Study questions</strong>:</p>
 </div>
 </div>
 <div id="unit-2-what-are-representations" class="section level3">
