--- a/index.html
+++ b/index.html
@@ -472,6 +472,13 @@ The final exam for this course is cumulative and open resource (open note, open 
 <p><strong>Goals</strong>: Apply the concepts from information theory to neurons.<br />
 <strong>Reading</strong>: Read: Stone <a href="https://drive.google.com/file/d/1Q4PR5CriSno2wKcDOSwihdSZ3U1Yp5op/view?usp=sharing">Selections from Chapter 3</a> from <em>Principles of Neural Information Theory: Computational Neuroscience and Metabolic Efficiency</em><br />
 <strong>Study questions</strong>:</p>
+<ul>
+<li>Study question 1: Consider Figure 3.3b from your reading. How many unique binary codes could be created in these eight time bins? How many unique codes could be created from 5 of the 8 bins containing spikes?<br />
+</li>
+<li>Study question 2: How much information (in bits) is contained in the previous example?<br />
+</li>
+<li>Study question 3: Consider Figure 3.4a and compare it to Figure 2.3a from Monday’s reading. Why doesn’t the coding capacity of a neuron always increase with firing rate?</li>
+</ul>
 </div>
 </div>
 <div id="unit-2-what-are-representations" class="section level3">
