Add 1-28 reading and questions

--- a/index.html
+++ b/index.html
@@ -485,6 +485,11 @@ The final exam for this course is cumulative and open resource (open note, open 
 <h3>Unit 2: What are representations?</h3>
 <div id="january-28-what-is-a-representation" class="section level4">
 <h4>January 28: What is a representation?</h4>
+<p><strong>Goals</strong>: Begin to create a working definition of ‘mental representation’ and articulate why this is not a straightforward task. <strong>Reading</strong>: Palmer, S. (1978) <a href="https://drive.google.com/file/d/1QEdVKTIhvbt45t6KJSpoAtPnN_ZOJfL6/view?usp=sharing">Fundamental Aspects of Cognitive Representation</a> from <em>Cognition and Categorization</em>.<br />
+<strong>Study questions</strong>:</p>
+<ul>
+<li>Study question: Palmer writes:“Trying to determine the nature of cognitive representation without first knowing about representation as a general construct is much like trying to determine the nature of oak trees without first knowing about trees as a general class of object.” What is a non-cognitive context that you have heard or used the concept of a <em>representation</em>? Consider the five elements of a representational system from page 262 and map them onto your example as far as is possible.</li>
+</ul>
 </div>
 <div id="january-31-what-is-the-difference-between-a-representations-content-and-its-function" class="section level4">
 <h4>January 31: What is the difference between a representation’s content and its function?</h4>
