--- a/index.html
+++ b/index.html
@@ -480,25 +480,33 @@ The final exam for this course is cumulative and open resource (open note, open 
 <li>Study question 3: Consider Figure 3.4a and compare it to Figure 2.3a from Monday’s reading. Why doesn’t the coding capacity of a neuron always increase with firing rate?</li>
 </ul>
 </div>
+<div id="january-28-what-is-information" class="section level4">
+<h4>January 28: What is information?</h4>
+<p><strong>Goals</strong>: Develop strategies for efficiently coding information with neurons.<br />
+<strong>Reading</strong>: Read: <a href="https://courses.cs.northwestern.edu/311/notes/huffman.pdf">Huffman Coding</a> from <em>Introduction to Algorithms</em> by Cormen, Leiserson &amp; Rivest.<br />
+<strong>Study questions</strong>:</p>
+<ul>
+<li>Study question 1: Consider the final encoding shown in Figure 6 on page 2. What is the binary sequence that represents “a”? What is the binary sequence that represents “e”?<br />
+</li>
+<li>Study question 2: Explain how encoding these letters in this fashion compresses the data.</li>
+</ul>
+</div>
 </div>
 <div id="unit-2-what-are-representations" class="section level3">
 <h3>Unit 2: What are representations?</h3>
-<div id="january-28-what-is-a-representation" class="section level4">
-<h4>January 28: What is a representation?</h4>
+<div id="january-31-what-is-a-representation" class="section level4">
+<h4>January 31: What is a representation?</h4>
 <p><strong>Goals</strong>: Begin to create a working definition of ‘mental representation’ and articulate why this is not a straightforward task. <strong>Reading</strong>: Palmer, S. (1978) <a href="https://drive.google.com/file/d/1QEdVKTIhvbt45t6KJSpoAtPnN_ZOJfL6/view?usp=sharing">Fundamental Aspects of Cognitive Representation</a> from <em>Cognition and Categorization</em>.<br />
 <strong>Study questions</strong>:</p>
 <ul>
 <li>Study question: Palmer writes:“Trying to determine the nature of cognitive representation without first knowing about representation as a general construct is much like trying to determine the nature of oak trees without first knowing about trees as a general class of object.” What is a non-cognitive context that you have heard or used the concept of a <em>representation</em>? Consider the five elements of a representational system from page 262 and map them onto your example as far as is possible.</li>
 </ul>
 </div>
-<div id="january-31-what-is-the-difference-between-a-representations-content-and-its-function" class="section level4">
-<h4>January 31: What is the difference between a representation’s content and its function?</h4>
+<div id="february-2-what-is-the-difference-between-a-representations-content-and-its-function" class="section level4">
+<h4>February 2: What is the difference between a representation’s content and its function?</h4>
 </div>
-<div id="february-2-are-representations-real" class="section level4">
-<h4>February 2: Are representations ‘real’?</h4>
-</div>
-<div id="february-4-what-do-we-talk-about-when-we-talk-about-representations" class="section level4">
-<h4>February 4: What do we talk about when we talk about representations?</h4>
+<div id="february-4-are-representations-real" class="section level4">
+<h4>February 4: Are representations ‘real’?</h4>
 </div>
 <div id="february-7-midterm-1" class="section level4">
 <h4>February 7: Midterm 1</h4>
