--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@ The final exam for this course is cumulative and open resource (open note, open 
 </ul>
 <p><strong>Study questions:</strong></p>
 <ul>
-<li>Study question 1: Explain the problems of the homunculus / Cartestian theatre.<br />
+<li>Study question 1: Explain the problems of the homunculus / Cartesian theatre.<br />
 </li>
 <li>Study question 2: By contrast, what is the “multiple drafts” theory of consciousness? How does it characterize the observer’s “stream of consciousness”?<br />
 </li>
@@ -536,15 +536,32 @@ The final exam for this course is cumulative and open resource (open note, open 
 </div>
 <div id="february-7-midterm-1" class="section level4">
 <h4>February 7: Midterm 1</h4>
+<p><strong>No class will be held to give you time on the exam</strong></p>
 </div>
 </div>
 <div id="unit-3-what-are-the-major-types-of-neural-codes" class="section level3">
 <h3>Unit 3: What are the major types of neural codes?</h3>
 <div id="february-9-what-does-a-single-neuron-know" class="section level4">
 <h4>February 9: What does a single neuron know?</h4>
+<p><strong>Goals</strong>: Explain the concept of a ‘grandmother cell’ and its history<br />
+<strong>Reading:</strong> Read: Gross (2002) <a href="http://www.cs.utexas.edu/~dana/Gross.pdf">Geneology of the “grandmother cell”</a><br />
+<strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: What is a “grandmother cell”? What do these cells respond to?<br />
+</li>
+<li>Study question 2: What is the labeled line theory of neural function? How does it relate to the theory of “grandmother cells”?</li>
+</ul>
 </div>
 <div id="february-11-what-does-a-single-neuron-know" class="section level4">
 <h4>February 11: What does a single neuron know?</h4>
+<p><strong>Goals</strong>: Determine whether we have evidence for grandmother cell-like coding<br />
+<strong>Reading</strong>: Read: Quiroga et al (2005) <a href="http://www.hms.harvard.edu/bss/neuro/bornlab/nb204/papers/quiroga-etal-nature2005.pdf">Invariant visual representation by single neurons in the human brain.</a><br />
+<strong>Study questions</strong>:</p>
+<ul>
+<li>Study question 1: Briefly describe the methodology of these experiments: who were the observers? Where in the brain were the recordings made? What stimuli were the observers shown?<br />
+</li>
+<li>Study question 2: Consider the “Jennifer Aniston” neuron presented in Figure 1 and the “Halle Barry” neuron presented in Figure 2. Which neuron seems more like a grandmother cell? Why?</li>
+</ul>
 </div>
 <div id="february-14-what-does-a-single-neuron-know" class="section level4">
 <h4>February 14: What does a single neuron know?</h4>
