New grandmother question

--- a/index.html
+++ b/index.html
@@ -549,7 +549,9 @@ The final exam for this course is cumulative and open resource (open note, open 
 <ul>
 <li>Study question 1: What is a “grandmother cell”? What do these cells respond to?<br />
 </li>
-<li>Study question 2: What is the labeled line theory of neural function? How does it relate to the theory of “grandmother cells”?</li>
+<li>Study question 2: What is the labeled line theory of neural function? How does it relate to the theory of “grandmother cells”?<br />
+</li>
+<li>Study question 3: If you were designing a brain, would a grandmother cell code seem like a good idea to you? Name one or more advantages to such a scheme and one or more disadvantages as you see them.</li>
 </ul>
 </div>
 <div id="february-11-what-does-a-single-neuron-know" class="section level4">
