Add week of 2-14

--- a/index.html
+++ b/index.html
@@ -567,12 +567,45 @@ The final exam for this course is cumulative and open resource (open note, open 
 </div>
 <div id="february-14-what-does-a-single-neuron-know" class="section level4">
 <h4>February 14: What does a single neuron know?</h4>
+<p><strong>Goals:</strong> Assess the plausibility of grandmother cell coding<br />
+<strong>Reading</strong>: Read: <a href="https://drive.google.com/file/d/1tl5F7WlZ9Ozun7oq8tbMfch2Rdz3ts2J/view?usp=sharing">Excerpts</a> from Anderson <em>An Introduction to Neural Networks</em>, chapter 10.<br />
+<strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: List four issues with grandmother cell representations. Which seems the most serious to you? Which seems the least serious? Why?<br />
+</li>
+<li>Study question 2: Your reading describes similarity as a “tricky” concept. Describe in detail one example where “similarity” is not a singular or straightforward concept.<br />
+</li>
+<li>Study question 3: For each of the five desirable properties of data representations, provide an example of this in the brain. For example, under the first property (similar events should give rise to similar representations), you might point to the fact that pattern classification algorithms are able to predict what one was seeing, thinking, or doing based on brain data. This means observed neural patterns generalize to new examples.</li>
+</ul>
 </div>
 <div id="february-16-what-does-a-population-of-neurons-know" class="section level4">
 <h4>February 16: What does a population of neurons know?</h4>
+<p><strong>Goals:</strong> Compare and contrast a local grandmother cell code with an alternative: distributed codes<br />
+<strong>Reading</strong>: Read: Thorpe (1989) <a href="https://drive.google.com/open?id=1P1fwlGnrmWgb6jNd1TPleHRuD5GjcMnc">Local versus distributed coding</a> <em>Intellectica</em><br />
+<strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: Explain the difference between value coding and variable coding, as attributed to Ballard.<br />
+</li>
+<li>Study question 2: Is the labeled line hypothesis a local or distributed code? Why?<br />
+</li>
+<li>Study question 3: One of the arguments against local coding is that there are too many neurons that would be required. Explain why this line of reasoning is fallacious.<br />
+</li>
+<li>Study question 4: Local coding schemes are often criticized for being fragile, meaning that any loss of a neuron could lead to catastrophic results. Thorpe shows that distributed coding schemes might be even worse. Explain this argument.<br />
+</li>
+<li>Class activity: <a href="https://en.wikipedia.org/w/api.php?action=query&amp;list=random&amp;rnlimit=20&amp;rnnamespace=0">here is a link</a> that shows you 20 random articles from Wikipedia</li>
+</ul>
 </div>
 <div id="february-18-what-does-a-population-of-neurons-know" class="section level4">
 <h4>February 18: What does a population of neurons know?</h4>
+<p><strong>Goals:</strong> Assess the possible advantages of a distributed coding scheme<br />
+<strong>Reading</strong>: Read: Hinton, McClelland, and Rumelhart <a href="https://drive.google.com/open?id=18Fb7ICbzygdUEadefdEW5rvjfNaF9Bmd">Chapter 1</a>, <em>Parallel Distributed Processing</em><br />
+<strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: Figure 2 demonstrates some of the contextual influences on reading. Imagine that the letters with ink splotches were entirely missing - would the letters be similarly easy to guess? What information are you using to perform the task?</li>
+<li>Study question 2: The chapter discusses <em>frames</em>, <em>scripts</em>, or <em>schemata</em> (synonymous terms for our purposes). What is in your script for a college course?<br />
+</li>
+<li>Study question 3: Define what a <em>pattern associator</em> is, and show an example in matrix form.</li>
+</ul>
 </div>
 <div id="february-21-winter-recess" class="section level4">
 <h4>February 21: WINTER RECESS</h4>
