--- a/index.html
+++ b/index.html
@@ -575,7 +575,9 @@ The final exam for this course is cumulative and open resource (open note, open 
 </li>
 <li>Study question 2: Your reading describes similarity as a “tricky” concept. Describe in detail one example where “similarity” is not a singular or straightforward concept.<br />
 </li>
-<li>Study question 3: For each of the five desirable properties of data representations, provide an example of this in the brain. For example, under the first property (similar events should give rise to similar representations), you might point to the fact that pattern classification algorithms are able to predict what one was seeing, thinking, or doing based on brain data. This means observed neural patterns generalize to new examples.</li>
+<li>Study question 3: For each of the five desirable properties of data representations, provide an example of this in the brain. For example, under the first property (similar events should give rise to similar representations), you might point to the fact that pattern classification algorithms are able to predict what one was seeing, thinking, or doing based on brain data. This means observed neural patterns generalize to new examples.<br />
+</li>
+<li>Class activity: <a href="https://en.wikipedia.org/w/api.php?action=query&amp;list=random&amp;rnlimit=20&amp;rnnamespace=0">here is a link</a> that shows you 20 random articles from Wikipedia</li>
 </ul>
 </div>
 <div id="february-16-what-does-a-population-of-neurons-know" class="section level4">
@@ -590,9 +592,7 @@ The final exam for this course is cumulative and open resource (open note, open 
 </li>
 <li>Study question 3: One of the arguments against local coding is that there are too many neurons that would be required. Explain why this line of reasoning is fallacious.<br />
 </li>
-<li>Study question 4: Local coding schemes are often criticized for being fragile, meaning that any loss of a neuron could lead to catastrophic results. Thorpe shows that distributed coding schemes might be even worse. Explain this argument.<br />
-</li>
-<li>Class activity: <a href="https://en.wikipedia.org/w/api.php?action=query&amp;list=random&amp;rnlimit=20&amp;rnnamespace=0">here is a link</a> that shows you 20 random articles from Wikipedia</li>
+<li>Study question 4: Local coding schemes are often criticized for being fragile, meaning that any loss of a neuron could lead to catastrophic results. Thorpe shows that distributed coding schemes might be even worse. Explain this argument.</li>
 </ul>
 </div>
 <div id="february-18-what-does-a-population-of-neurons-know" class="section level4">
