Update through midterm 2

--- a/index.html
+++ b/index.html
@@ -618,15 +618,50 @@ The final exam for this course is cumulative and open resource (open note, open 
 </div>
 <div id="february-28-what-does-a-population-of-neurons-know" class="section level4">
 <h4>February 28: What does a population of neurons know?</h4>
+<p><strong>Goals:</strong> Dissect an example of a population code.<br />
+<strong>Reading:</strong> Read: Georgeopoulos (1986) <a href="https://drive.google.com/file/d/1T5yALmhb1pyOLdssXk8uOdddu0dDKB5N/view?usp=sharing">Neural Coding of Movement Direction</a> <em>Science</em><br />
+<strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: Explain the finding depicted in Figure 1. In what other sensory system have we previously seen a similar type of tuning?<br />
+</li>
+<li>Study question 2: Explain the finding depicted in Figure 3. How was the population vector obtained?<br />
+</li>
+<li>Study question 3: Are there any biases in the data collection methods that could have influenced this result? What are they?</li>
+</ul>
 </div>
 <div id="march-2-how-does-the-brain-represent-information-in-time" class="section level4">
 <h4>March 2: How does the brain represent information in time?</h4>
+<p><strong>Goals:</strong> Understand how time provides challenges and opportunities in the study of neural codes.<br />
+<strong>Reading:</strong> Read: Gerster <a href="https://drive.google.com/file/d/1hHBvweYtYMhbFvrRcTGVmXbvwBl090kA/view?usp=sharing">“How can brains be so fast?”</a> from <em>23 Problems in Systems Neuroscience</em><br />
+<strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: Explain how the speed of neural processing is limited by the the dynamics of membrane responses and synaptic response. What causes these responses to lag in time?<br />
+</li>
+<li>Study question 2: Explain why a “naive” rate coding scheme with a 100 ms integration window would only allow the brain to process at slower than 10 Hz.<br />
+</li>
+<li>Study question 3: “Given the large number of neurons in the cortex, another potential coding scheme seems to be a ‘rate’ defined by a population average rather than a temporal average”. If this is the case, would this be a local code, a distributed code, or could it be either? Explain your reasoning.<br />
+</li>
+<li>Study question 4: Explain how having a small amount of baseline firing can effectively reduce the membrane time constant.</li>
+</ul>
 </div>
 <div id="march-4-how-does-the-brain-represent-information-in-time" class="section level4">
 <h4>March 4: How does the brain represent information in time?</h4>
+<p><strong>Goals:</strong> Be able to explain one temporal code: the time to first spike code.<br />
+<strong>Reading:</strong> Read: Van Rullen et al (2005) <a href="https://drive.google.com/file/d/1wIvQ0bdivQcKRjLY01IUhlFpo-WBrKie/view?usp=sharing">Spike times make sense.</a> <em>Trends in Neurosciences</em><br />
+<strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: Describe the experiment cited by the authors on page 1 that provides evidence for information being carried in a “time-to-first-spike” manner. What is the evidence that this code is reliable?<br />
+</li>
+<li>Study question 2: Time-based codes are often criticized for being too unreliable due to the natural variability of neural firing. To address this issue, Van Rullen writes “a spike that would be precisely timed with respect to an internal event to which the experimenter does not have access will be considered, by default, as unreliable.” List two types of internal events that he might be referring to.<br />
+</li>
+<li>Study question 3: One other issue with time-based codes is that they seem to require a mechanism to keep track of event times and to reset after previous events. What two mechanisms does Van Rullen suggest?</li>
+</ul>
 </div>
 <div id="march-7-how-does-the-brain-represent-information-in-time" class="section level4">
 <h4>March 7: How does the brain represent information in time?</h4>
+<p><strong>Goals:</strong> Understand how information may be coded in population oscillations.<br />
+<strong>Reading:</strong> Read: Lisman &amp; Jensen (2013) <a href="https://drive.google.com/file/d/1O4oKNbVYlcAix30m09ZmyDGOP-ulOtMk/view?usp=sharing">The Theta-Gamma Neural Code.</a> <em>Neuron</em><br />
+<strong>Study questions:</strong></p>
 </div>
 <div id="march-11-midterm-2" class="section level4">
 <h4>March 11: Midterm 2</h4>
