New questions question

--- a/index.html
+++ b/index.html
@@ -641,7 +641,9 @@ The final exam for this course is cumulative and open resource (open note, open 
 </li>
 <li>Study question 3: “Given the large number of neurons in the cortex, another potential coding scheme seems to be a ‘rate’ defined by a population average rather than a temporal average”. If this is the case, would this be a local code, a distributed code, or could it be either? Explain your reasoning.<br />
 </li>
-<li>Study question 4: Explain how having a small amount of baseline firing can effectively reduce the membrane time constant.</li>
+<li>Study question 4: Explain how having a small amount of baseline firing can effectively reduce the membrane time constant.<br />
+</li>
+<li>Study question 5 (optional): What questions do you have about the reading that you would like to cover in class?</li>
 </ul>
 </div>
 <div id="march-4-how-does-the-brain-represent-information-in-time" class="section level4">
@@ -654,7 +656,9 @@ The final exam for this course is cumulative and open resource (open note, open 
 </li>
 <li>Study question 2: Time-based codes are often criticized for being too unreliable due to the natural variability of neural firing. To address this issue, Van Rullen writes “a spike that would be precisely timed with respect to an internal event to which the experimenter does not have access will be considered, by default, as unreliable.” List two types of internal events that he might be referring to.<br />
 </li>
-<li>Study question 3: One other issue with time-based codes is that they seem to require a mechanism to keep track of event times and to reset after previous events. What two mechanisms does Van Rullen suggest?</li>
+<li>Study question 3: One other issue with time-based codes is that they seem to require a mechanism to keep track of event times and to reset after previous events. What two mechanisms does Van Rullen suggest?<br />
+</li>
+<li>Study question 4 (optional): What questions do you have about the reading that you would like to cover in class?</li>
 </ul>
 </div>
 <div id="march-7-how-does-the-brain-represent-information-in-time" class="section level4">
@@ -662,6 +666,18 @@ The final exam for this course is cumulative and open resource (open note, open 
 <p><strong>Goals:</strong> Understand how information may be coded in population oscillations.<br />
 <strong>Reading:</strong> Read: Lisman &amp; Jensen (2013) <a href="https://drive.google.com/file/d/1O4oKNbVYlcAix30m09ZmyDGOP-ulOtMk/view?usp=sharing">The Theta-Gamma Neural Code.</a> <em>Neuron</em><br />
 <strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: Consider the theoretical framework presented in Figure 1b. Where is the theta signal represented? Where is the gamma signal represented? How are two unique items represented in this theta-gamma coupling?<br />
+</li>
+<li>Study question 2: Is the code presented in this reading a local or distributed code? Why?<br />
+</li>
+<li>Study question 3: The authors note that the typical working memory capacity of 7 +/- 2 is the same as the number of gamma cycles within a theta cycle. How compelled are you by the argument that this is a neural correlate of working memory capacity?<br />
+</li>
+<li>Study question 4 (optional): What questions do you have about the reading that you would like to cover in class?</li>
+</ul>
+</div>
+<div id="march-9" class="section level4">
+<h4>March 9:</h4>
 </div>
 <div id="march-11-midterm-2" class="section level4">
 <h4>March 11: Midterm 2</h4>
