--- a/index.html
+++ b/index.html
@@ -676,11 +676,20 @@ The final exam for this course is cumulative and open resource (open note, open 
 <li>Study question 4 (optional): What questions do you have about the reading that you would like to cover in class?</li>
 </ul>
 </div>
-<div id="march-9" class="section level4">
-<h4>March 9:</h4>
+<div id="march-9-is-spike-time-variability-signal-or-noise" class="section level4">
+<h4>March 9: Is spike time variability signal or noise?</h4>
+<p><strong>Goals:</strong> Assess the potential reliability of time-based codes.<br />
+<strong>Reading:</strong> Read: Stein et al (2005) <a href="https://drive.google.com/file/d/1SDDAAv4WJ98qVGJfmLog0Hj9-ydUYxxz/view?usp=sharing">Neuronal Variability: Noise or part of the signal?</a> <em>Nature Reviews Neuroscience</em> <strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: Explain Figure 1 in your own words. To what extent is the problem illustrated in this figure a problem for rate codes? To what extent is this problem an issue for time-based codes?<br />
+</li>
+<li>Study question 2: Explain how noise might be beneficial to the neural code.</li>
+<li>Study question 3 (optional): What questions do you have about the reading that you would like to cover in class?</li>
+</ul>
 </div>
 <div id="march-11-midterm-2" class="section level4">
 <h4>March 11: Midterm 2</h4>
+<p><strong>No class.</strong> Exam will be released on Lyceum at 8:25.</p>
 </div>
 </div>
 <div id="unit-4-what-constraints-are-places-on-neural-codes" class="section level3">
