Add another week

--- a/index.html
+++ b/index.html
@@ -696,15 +696,57 @@ The final exam for this course is cumulative and open resource (open note, open 
 <h3>Unit 4: What constraints are places on neural codes?</h3>
 <div id="march-14-why-do-we-have-brains" class="section level4">
 <h4>March 14: Why do we have brains?</h4>
+<p><strong>Goal:</strong> Develop a theory of what problems a brain is trying to solve.<br />
+<strong>Reading:</strong> Read: Sterling &amp; Laughlin <a href="https://drive.google.com/file/d/13kVVq3LjCaF2vgo8QDzSgA04Z2Hr2pO_/view?usp=sharing">“Why an Animal Needs a Brain”</a> from <em>Principles of Neural Design</em><br />
+<strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: Consider the “behaviors” evident in a single-celled bacterium such as <em>E. coli</em>. How is it able to perceive, move, and remember without a brain? How are memories stored in the organism?<br />
+</li>
+<li>Study question 2: Why is a longer memory of no advantage to a single-celled organism such as <em>E. coli</em> or <em>Paramecium</em>?<br />
+</li>
+<li>Study question 3: Why are fewer synapses less reliable in general? What trade-off does <em>C Elegans</em> make to “get away with” so few synapses?<br />
+</li>
+<li>Study question 4: Why is it an advantage for an organism to minimize “wiring” length - i.e. the length of axons?<br />
+</li>
+<li>(Optional) Does <em>C. Elegans</em> experience pleasure?<br />
+</li>
+<li>(Optional) What other questions do you have about the reading?</li>
+</ul>
 </div>
-<div id="march-16-why-is-the-brain-in-the-head" class="section level4">
-<h4>March 16: Why is the brain in the head?</h4>
+<div id="march-16-what-are-the-metabolic-demands-of-the-brain" class="section level4">
+<h4>March 16: What are the metabolic demands of the brain?</h4>
+<p><strong>Goal:</strong> Begin to build an energy budget for the brain.<br />
+<strong>Reading:</strong> Read: Attwell &amp; Laughlin (2001) <a href="https://drive.google.com/file/d/1IRxObPOU0jnqzv8ZINfqopVj6zPQaPnQ/view?usp=sharing">An Energy Budget for Signaling in the Grey Matter of the Brain</a> <em>Journal of Cerebral Blood Flow and Metabolism</em> (The calculations on page 1134 are an optional quantitative adventure)<br />
+<strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: If 200,000 Na+ enter the post-synaptic neuron, why are 67,000 ATP required to evict them via Na+/K+ pumps?<br />
+</li>
+<li>Study question 2 Pay particular attention to the section “Distributed coding, energy use, and coding sparseness”. Although we will cover the calculations in detail in the class, have a sense of whether <em>local</em> or <em>distributed</em> codes are more energy efficient and why.<br />
+</li>
+<li>Study question 3: What are some of the simplifying assumptions made by this work? Will they systematically overestimate or underestimate energy consumption?<br />
+</li>
+<li>(Optional): if 3x10^9 ATP are used per neuron, per second; and if 1 mole of ATP contains 30.5 kJ or 7.5 kcal of energy, how many kcal of food is necessary just to power your brain for a day?<br />
+</li>
+<li>(Optional): what other questions do you have about this reading?</li>
+</ul>
 </div>
-<div id="march-18-what-are-the-metabolic-demands-of-the-brain" class="section level4">
-<h4>March 18: What are the metabolic demands of the brain?</h4>
+<div id="march-18-how-do-the-brains-metabolic-demands-constrain-the-neural-code" class="section level4">
+<h4>March 18: How do the brain’s metabolic demands constrain the neural code?</h4>
+<p><strong>Goal:</strong> Be able to use the metabolic demands of the brain as a constaint on the types of codes the brain might use.<br />
+<strong>Reading:</strong> Read: Lennie (2003) <a href="http://www2.bcs.rochester.edu/sites/plennie/pdfs/Lennie03a.pdf">The Cost of Cortical Computation</a> <em>Current Biology</em><br />
+<strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: Name one known difference between human and rodent brains that makes Lennie’s calculations of neural energy use different from those of Attwell &amp; Laughlin from Wednesday’s reading.<br />
+</li>
+<li>Study question 2: Describe the methodology that Lennie used to estimate the <em>sustainable spike rate</em>.<br />
+</li>
+<li>Study question 3: Name one fundamental agreement between the Lennie’s analysis and that of Attwell &amp; Laughlin.<br />
+</li>
+<li>(Optional) what other questions do you have about this reading?</li>
+</ul>
 </div>
-<div id="march-21-how-do-the-brains-metabolic-demands-constrain-the-neural-code" class="section level4">
-<h4>March 21: How do the brain’s metabolic demands constrain the neural code?</h4>
+<div id="march-21-how-redundant-is-the-environment" class="section level4">
+<h4>March 21: How redundant is the environment?</h4>
 </div>
 <div id="march-23-winter-recess" class="section level4">
 <h4>March 23: WINTER RECESS</h4>
