Add through unit 5

--- a/index.html
+++ b/index.html
@@ -747,6 +747,17 @@ The final exam for this course is cumulative and open resource (open note, open 
 </div>
 <div id="march-21-how-redundant-is-the-environment" class="section level4">
 <h4>March 21: How redundant is the environment?</h4>
+<p><strong>Goal</strong>: Articulate how we might begin to measure the amount of information in our environments.<br />
+<strong>Reading:</strong> * Read: Attneave (1954) <a href="https://drive.google.com/open?id=1nSj7smi7bP3ixAw9NXqyFOghXuTlDn0L">Some Informational Aspects of Visual Perception</a> <em>Psychological Review</em><br />
+<strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: What does Attneave mean when he considers the visual world to be redundant?</li>
+<li>Study question 2: Use the Hartley equation to verify the maximum entropy that Attneave calculated in footnote 4.<br />
+</li>
+<li>Study question 3: Reflect on the following paradox: how is it that a redundant figure, such as that in Figure 1 as well as a non-redundant figure, such as that in Figure 4, both be perceived as homogeneous?<br />
+</li>
+<li>(Optional) What other questions do you have about this reading?</li>
+</ul>
 </div>
 <div id="march-23-winter-recess" class="section level4">
 <h4>March 23: WINTER RECESS</h4>
@@ -756,6 +767,21 @@ The final exam for this course is cumulative and open resource (open note, open 
 </div>
 <div id="march-28-how-redundant-is-the-environment" class="section level4">
 <h4>March 28: How redundant is the environment?</h4>
+<p><strong>Goals:</strong> Conduct a case study on one method for measuring the information in an environment.<br />
+<strong>Reading:</strong> Read: Kersten (1987) <a href="https://drive.google.com/file/d/12Zvfqe3305OU29UvQxi2HgMqE0exXoPB/view?usp=sharing">Predictability and redundancy of natural images</a></p>
+<ul>
+<li>Optional reading: Shannon (1951) <a href="https://drive.google.com/file/d/1NH4JQjFzlUt1V4-FlICPPpcIkR0KqGKr/view?usp=sharing">Prediction and entropy of written English</a></li>
+</ul>
+<p><strong>Study questions:</strong></p>
+<ul>
+<li>Study question 1: Kersten uses images that were 128x128 pixels in size, and could take one of 16 different gray level values. How many possible images could be created with these parameters?<br />
+</li>
+<li>Study question 2: Kersten (and Shannon in the optional reading) use human judgments to measure entropy. Why is this necessary?<br />
+</li>
+<li>Study question 3: How is Kersten’s experiment similar to the thought experiment presented in the first two pages of Attneave’s study that you read last time? How is it different?<br />
+</li>
+<li>(Optional) What other questions do you have about this reading?</li>
+</ul>
 </div>
 </div>
 <div id="unit-5-what-are-the-open-questions-in-neural-codes" class="section level3">
